[package]
name = "moving_square"
version = "0.1.0"
authors = ["Kranando <41551796+Kranando@users.noreply.github.com>"]

[dependencies]
piston_window = "0.81.0"
piston2d-graphics = "0.26.0"
find_folder = "0.3.0"
gfx_device_gl = "0.15.3"
image = "0.20.0"
piston2d-opengl_graphics = "0.53.0"
piston = "0.37.0"
gfx = "0.17.1"
piston2d-gfx_graphics = "0.52.0"
rand = "0.5"
piston2d-sprite = "0.45.0"
piston-viewport = "0.4.0"